Update MongoDB URI to use Atlas connection

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=8000
-MONGODB_URI=mongodb://localhost:27017/adventure_learning
+MONGODB_URI=mongodb+srv://test-1:SNgAPRomkHlMDV1h@cluster0.onrtu7m.mongodb.net/
 NODE_ENV=development
 CORS_ORIGIN=http://localhost:5173
