--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://test-1:SNgAPRomkHlMDV1h@cluster0.onrtu7m.mongodb.net/
+MONGODB_URI=################################################
 NODE_ENV=development
 CORS_ORIGIN=http://localhost:5173
